syntax = "proto3";

package goakt.v1;

// Strategy is used to handle a failed child actor
enum StrategyDirective {
  // STOP means stop the child actor in case of error
  STOP_DIRECTIVE = 0;
  // RESTART means restart the child actor in case of error
  RESTART_DIRECTIVE = 1;
}
